templates/ec2-instance.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Single EC2 instance (Amazon Linux 2023) with an auto-created key pair and SSH-enabled security group.

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t2.small, t2.medium, t3.micro, t3.small, t3.medium]
    Description: EC2 instance size.
  SSHLocation:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '^(\d{1,3}\.){3}\d{1,3}/\d{1,2}$'
    Description: CIDR allowed to SSH to the instance. Restrict to your IP (x.x.x.x/32) where possible.
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    Description: Public SSM parameter resolving to the latest Amazon Linux 2023 AMI.

Resources:
  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${AWS::StackName}-key"

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !GetAtt SecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-instance"

Outputs:
  InstanceId:
    Description: EC2 instance ID
    Value: !Ref Instance
  PublicIp:
    Description: Public IP of the instance
    Value: !GetAtt Instance.PublicIp
  PublicDns:
    Description: Public DNS name of the instance
    Value: !GetAtt Instance.PublicDnsName
  KeyPairId:
    Description: Key pair ID; the private key is stored in SSM Parameter Store at /ec2/keypair/<KeyPairId>
    Value: !GetAtt KeyPair.KeyPairId
  KeyName:
    Value: !Ref KeyPair
